Regression: Geometry Node: Incorrect cyclic curve factor parameter #104842

Closed
opened 2023-02-16 23:09:42 +01:00 by higgsas · 2 comments

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3060 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 528.24

Blender Version
Broken: version: 3.5.0 Alpha, branch: master, commit date: 2022-11-09 02:25, hash: rB756538b4a117
Worked: version: 3.5.0 Alpha, branch: master, commit date: 2022-11-04 22:28, hash: rB4a313b82529b

Caused by: 66dda2b902

Short description of error
Cyclic curves factor parameter always ends with value of 1, instead of interpolated value

Exact steps for others to reproduce the error

**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3060 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 528.24 **Blender Version** Broken: version: 3.5.0 Alpha, branch: master, commit date: 2022-11-09 02:25, hash: `rB756538b4a117` Worked: version: 3.5.0 Alpha, branch: master, commit date: 2022-11-04 22:28, hash: `rB4a313b82529b` Caused by: https://projects.blender.org/blender/blender/commit/66dda2b902f0e2d1ee4a6d956ae5144743f7df2d **Short description of error** Cyclic curves factor parameter always ends with value of 1, instead of interpolated value ![](https://i.imgur.com/Z3WvYhe.png) **Exact steps for others to reproduce the error**
higgsas added the
Priority
Normal
Status
Needs Triage
Type
Report
labels 2023-02-16 23:09:42 +01:00
Hans Goudey added
Module
Nodes & Physics
Priority
High
and removed
Priority
Normal
labels 2023-02-16 23:11:53 +01:00
Hans Goudey added this to the Nodes & Physics project 2023-02-16 23:11:54 +01:00
Hans Goudey added
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-02-16 23:11:54 +01:00
Iliya Katushenock changed title from Blender 3.4.1 Geometry Nodes incorrect cyclic curve factor parameter to Regression: Geometry Node: Incorrect cyclic curve factor parameter 2023-02-17 07:54:46 +01:00
Iliya Katushenock self-assigned this 2023-02-17 12:46:30 +01:00
Hans Goudey added
Type
Bug
and removed
Type
Report
labels 2023-02-17 14:43:10 +01:00
Iliya Katushenock removed their assignment 2023-02-17 16:22:34 +01:00
Member

@HooglyBoogly 66dda2b902 breaks this quite obviously for cyclic curves unfortunately. I'm a bit surprised this wasn't caught by tests.

It seems like curve_length_point_domain would also have to output the total length for each curve that it uses. It should take cyclic curves into account and can also treat nurbs in a special way.

@HooglyBoogly 66dda2b902f0e2d1ee4a6d956ae5144743f7df2d breaks this quite obviously for cyclic curves unfortunately. I'm a bit surprised this wasn't caught by tests. It seems like `curve_length_point_domain` would also have to output the total length for each curve that it uses. It should take cyclic curves into account and can also treat nurbs in a special way.
Member

I've prepared a test file for the spline parameter node. It also shows there there seem to be issues with joining nurbs and bezier curves, not sure what is causing that.

image

I've prepared a test file for the spline parameter node. It also shows there there seem to be issues with joining nurbs and bezier curves, not sure what is causing that. ![image](/attachments/36b4f4a0-67b4-42bb-a9a0-ab79e9ab110e)
Hans Goudey added this to the 3.5 milestone 2023-02-22 04:17:41 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-02-22 19:36:13 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#104842
No description provided.