Fix #104842: Incorrect cyclic curve parameter node factor

66dda2b902f0e2d1ee4 made an incorrect change to account for the special
case for NURBS. Instead, make the step that turns the lengths into
parameters more explicit, and pass the correct total length for each
curve, even in the cyclic case.

Pull Request #105079